# p2p-voicechats

./: LICENSE  README.md
.github/workflows/: ci.yml  client-windows.yml  release.yml
client/: package-lock.json  package.json
client/src-tauri/: Cargo.toml  Info.plist
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: keychain.rs  main.rs  webview_permissions.rs
client/src/components/: CallPanel.svelte  ChannelView.svelte  Main.svelte  MessageContent.svelte  Modal.svelte  OgCard.svelte  Onboarding.svelte  ServerForm.svelte  Sticker.svelte  StickerPicker.svelte
client/src/lib/: api.ts  breakout-box.d.ts  broadcast.test.ts  broadcast.ts  call.test.ts  call.ts  clipboard.ts  credentials.ts  crypto.test.ts  crypto.ts  emoji.test.ts  emoji.ts  linkify.test.ts  linkify.ts  og.ts  platform.ts  sounds.ts  store.svelte.ts  webp.test.ts  webp.ts  ws.ts
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: CRYPTO.md  DECISIONS.md  PROTOCOL.md
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  spaces.rs  state.rs  stickers.rs  turn.rs  ws.rs
server/tests/: integration.rs
