[package]
name = "malguem"
version = "0.1.0"
edition = "2021"
description = "Lightweight self-hosted voice/chat/screen-share for friends"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Credential storage in the OS keychain (identity private keys + tokens).
# A backend is selected per-target: Credential Manager on Windows, Keychain on
# macOS, and Secret Service (via D-Bus) on Linux for `tauri dev`. The Linux
# build vendors libdbus and uses pure-Rust crypto so it needs no system
# packages (libdbus-1-dev / openssl) to compile.
keyring = "3"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust", "vendored"] }

# Windows-only: grant getUserMedia (mic/camera) inside WebView2. Version is
# pinned to match wry's (see Cargo.lock); if a future wry bump causes a type
# mismatch on `controller()`, run `cargo tree -i webview2-com` and align this.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

[profile.release]
strip = true
lto = true
codegen-units = 1
